# clang-tools

clang-tools/example-tool/: example.cpp
clang-tools/final_pragma_appender/: CMakeLists.txt
clang-tools/loopPrinter/: CMakeLists.txt  loopPrinter.cpp
tools/: CMakeLists.txt
tools/final_pragma_appender/: PragmaAppend.cpp
